--- a/Resume.html
+++ b/Resume.html
@@ -1,21 +1,28 @@
 <html>
   <head>
     <title>Resume</title>
+    <link rel="stylesheet" href="font-awesome.css">
     <style>
+      *{
+        font-family: 'Raleway',sans-serif,'Comic Sans MS';
+      }
       .top{
         text-align: right;
         margin: 40px 25px;
       }
       .hr{
-        border: 1px solid rgb(209, 150, 150);
+        border: 1px solid rgb(245, 200, 200);
         color: aqua;
         text-align: right;
       }
       .h1{
-        background-color:rgb(247, 205, 211);
+        background-color:rgb(209, 198, 200);
         text-align: left;
         margin: 25px;
         padding: 3px 1px 1px 12px;
+      }
+      h2{
+          text-transform: uppercase;
       }
       .th{
         font-size: medium;   
@@ -26,6 +33,7 @@
       }
       .last{
         margin: 23px;
+        margin-top: 70px;
       }
       .sat{
         color: rgb(30, 73, 73);
@@ -35,8 +43,8 @@
         margin: 22px;
       }
       .re{
-        color: red;
-        text-shadow: 3px 2px 3px gray;
+        color: black;
+        text-shadow: 3px 2px 3px rgb(121, 118, 118);
 
       }
       .feild{
@@ -47,37 +55,40 @@
   </head>
   <body>
     <fieldset class="feild" width="100%">
-      <legend><h1 class="re">Resume</h1></legend>
+      <legend><h1 class="re">Resumme</h1></legend>
    <p class="top">
    SATISH YADAV<br>
    H no-380A Hari Nagar <br>
    Ashram Sunlight Colony <br>
    No-2 NEW DELHI-110014<br>
    Contect:- +91 8826088213<br>
-   Email Id:- thakur65091@gmail.com<br></p>
+   Email Id:- SatishWithCode@gmail.com<br></p>
      <hr class="hr" width="80%">
      <h2 class="h1">Education</h2>
      <p class="Ed">
        <ul>
-         <li class="th">10<sup>th</sup> Passed State Board With   85% </li>
-         <li class="th">12<sup>th</sup> Passed State Board With 86%(in pcm)</li>
-         <li class="th">B.sc(Computer Science) in last year from university of Delhi </li>
+         <li class="th">2018 - 2021 | Bsc Computer Science from University Of Delhi
+            | 6.5 cgpa</li>
+         <li class="th">2015 - 2017 | Intermediate | 86%</li>
+         <li class="th">2013 - 2015 | Matriculation | 85%</li>
        </ul>
      </p>
-     <h2 class="h1">Fitness</h2>
-     <ul><li class="th">Weightlifting Certificate in 120<sub>kg</sub> deadlift from Jawaharlal Nehru Stadium(JNS)</li></ul>
-     <h2 class="h1">Technical details</h2>
+     <h2 class="h1">Technical Skills</h2>
      <ul>
-       <li class="th">Basic knowledge of Computer Science</li>
+       <li class="th">HTML, CSS, JavaScript.</li>
+       <li class="th">Java and C Programming Language.</li>
      </ul>
      <h2 class="h1">Strength</h2>
      <ul>
-       <li class="th">Good ability to hard work.</li>
-       <li class="th">Punctual of time</li>
+       <li class="th">Good interpersonal and communication skills.</li>
+       <li class="th">Teamwork mindset. Across different teams.</li>
+       <li class="th">Ability to work under pressure.
+    </li>
+       <li class="th">Open to learn new technologies</li>
      </ul>
      <h2 class="h1">Personal Details</h2>
      <p class="pd">
-      Date Of Birth : 06<sup>th</sup> May 1998<br>
+      Date Of Birth : 01<sup>th</sup> Jul 2000<br>
       Gender :Male<br>
       Married Status : Unmarried<br>
       Nationality : Indian<br>
